# MultidimArrays

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake.in
include/: MultidimArrays.h  MultidimIndexManipulators.h
test/: simple_test.cpp
